Fix TableField components on mobile

--- a/components/common/Select/index.module.scss
+++ b/components/common/Select/index.module.scss
@@ -63,6 +63,10 @@
 
   &.table {
     min-width: $unit * 30;
+
+    @include breakpoint(phone) {
+      width: 100%;
+    }
   }
 
   &.hidden {
